Update favicon to new purple logo

--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
     <meta name="twitter:description" content="by devs for devs. Meme token of TON developers." />
     <meta name="twitter:image" content="/attached_assets/2025-11-30_21.27.41_1765057405798.jpg" />
 
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
